its late front section complete :)

--- a/index.html
+++ b/index.html
@@ -5,15 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Top Games</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     
     <div class="game">
+
+        <div class="rank">1</div>
+
         <div class="front">
-            <img src="img/Apex Legends-188x250.jpg" alt="">
-            <h3 class="name">Game Name</h3>
+            <img class="thumbnail" src="img/Apex Legends-188x250.jpg" alt="">
+            <h3 class="name">Apex Legends</h3>
             <div class="stats">
-                <p class="viewers"></p>
+                <p class="viewers">539.9k</p>
                 <div class="streamers">
                     <img src="img/streamer1.png" alt="">
                     <img src="img/streamer2.png" alt="">
@@ -23,8 +27,30 @@
         </div>
 
         <div class="back">
-
+            <div class="streaming-info">
+                <p class="game-stat">559.9k<span>Watching</span></p>
+                <p class="game-stat">25.8k<span>Streams</span></p>
+            </div>
+            <button class="btn">See more streams</button>
+            <div class="streamers">
+                <div class="streamer">
+                    <p class="name">Gamer 1</p>
+                    <p class="number">36.1k</p>
+                </div>
+                <div class="streamer">
+                    <p class="name">Gamer 2</p>
+                    <p class="number">36.1k</p>
+                </div>
+                <div class="streamer">
+                    <p class="name">Gamer 3</p>
+                    <p class="number">36.1k</p>
+                </div>
+            </div>
         </div>
+    </div>
+
+    <div class="background">
+
     </div>
 
 </body>
