--- a/index.html
+++ b/index.html
@@ -34,22 +34,27 @@
             <button class="btn">See more streams</button>
             <div class="streamers">
                 <div class="streamer">
+                    <div class="icon"><img src="img/streamer1.png" alt=""></div>
                     <p class="name">Gamer 1</p>
                     <p class="number">36.1k</p>
                 </div>
                 <div class="streamer">
+                    <div class="icon"><img src="img/streamer2.png" alt=""></div>
                     <p class="name">Gamer 2</p>
                     <p class="number">36.1k</p>
                 </div>
                 <div class="streamer">
+                    <div class="icon"><img src="img/streamer3.png" alt=""></div>
                     <p class="name">Gamer 3</p>
                     <p class="number">36.1k</p>
                 </div>
             </div>
         </div>
-    </div>
+   
 
-    <div class="background">
+        <div class="background">
+
+        </div>
 
     </div>
 
